--- a/src/components/StateWiseData/StateWiseData.css
+++ b/src/components/StateWiseData/StateWiseData.css
@@ -1,10 +1,3 @@
-* {
-  box-sizing: border-box;
-  margin: 0px;
-}
-.state-details{
-  margin-top: 120px;
-}
 .state-bg-container {
   background-color: #161625;
   min-height: 100vh;
@@ -12,10 +5,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding-top: 90px;
+  padding-left: 10%;
+  padding-right: 10%;
 }
-.state-card {
+
+/*.state-card {
   width: 85%;
-}
+  padding-top: 90px;
+}*/
 .state-heading-card {
   display: flex;
   justify-content: space-between;
@@ -52,7 +52,7 @@
 .state-result-card {
   width: 100%;
   height: 20vh;
-  margin-top: 20px;
+  margin-top: 10px;
   margin-bottom: 20px;
 }
 .total-district-card {
@@ -62,16 +62,11 @@
   margin-bottom: 20px;
   color: #cbd5e1;
 }
-.district-heading span{
-   font-size: 26px;
-   margin-left: 5px;
-}
-
 .district-card-container {
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  gap: 30px;
   flex-wrap: wrap;
   list-style: none;
   color: #94a3b8;
@@ -84,7 +79,13 @@
   width: 100%;
   overflow-x: auto;
 }
-
+.loader {
+  height: 30vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 @media screen and (max-width: 700px) {
   .name-of-state {
     background: rgba(2, 132, 199, 0.16);
@@ -137,6 +138,6 @@
     color: #cbd5e1;
   }
   .graphs-data{
-      display: none;
+    display: none;
   }
 }
